Fixing background image scaling on mobile

--- a/css/mobilePortraitStyle.css
+++ b/css/mobilePortraitStyle.css
@@ -26,6 +26,15 @@
     background-position: -100vw 0vh;
     -webkit-transition: all 1s ease 0s;
     transition: all 1s ease 0s;
+    background-attachment: scroll;
+}
+  
+#background2{
+    background-attachment: scroll;
+}
+
+#background3{
+    background-attachment: scroll;
 }
 /* ================================================= */
 /* HEADER */
